<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="90dp"
    android:background="@color/colorGeryWhite">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="5dp"></ImageView>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/date"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/date"
            android:gravity="center"
            android:textSize="20sp"></TextView>

        <LinearLayout
            android:id="@+id/home_title_1st"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:background="@drawable/rounded_rectangle"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/ic_search"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/home_title_text"
                android:textSize="16sp"
                android:textColor="@color/colorGeryDark" />

        </LinearLayout>

        <TextView
            android:id="@+id/day"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/day"
            android:textSize="20sp"
            android:gravity="center" ></TextView>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/home_title_2nd"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_collection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/collection"
            android:textSize="12sp"
            android:textColor="@color/colorGeryDark"
            android:background="@color/colorGeryWhite"></Button>

        <Button
            android:id="@+id/button_recommend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recommend"
            android:textSize="12sp"
            android:textColor="@color/colorBlack"
            android:background="@color/colorGeryWhite"></Button>

        <Button
            android:id="@+id/button_yq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/real_time_yq"
            android:textSize="12sp"
            android:textColor="@color/colorRed"
            android:background="@color/colorGeryWhite"></Button>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorGery"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorGeryWhite"/>
</LinearLayout>